Added iron rods and plates as some of our first items.

--- a/src/main/resources/assets/apexindustrial/lang/en_us.json
+++ b/src/main/resources/assets/apexindustrial/lang/en_us.json
@@ -1,5 +1,6 @@
 {
-  "item.apexindustrial.test_item": "Test item",
+  "item.apexindustrial.iron_rod": "Iron Rod",
+  "item.apexindustrial.iron_plate": "Iron Plate",
 
   "item.apexindustrial.miner": "Miner Mk 1",
   "block.apexindustrial.miner": "Miner Mk 1"
