Added the 'iron frame' the first tier of item.

--- a/src/main/resources/assets/apexindustrial/lang/en_us.json
+++ b/src/main/resources/assets/apexindustrial/lang/en_us.json
@@ -1,6 +1,7 @@
 {
-  "item.apexindustrial.iron_rod": "Iron Rod",
+  "item.apexindustrial.iron_frame": "Iron Frame",
   "item.apexindustrial.iron_plate": "Iron Plate",
+  "item.apexindustrial.iron_rod": "Iron Rod",
 
   "item.apexindustrial.miner": "Miner Mk 1",
   "block.apexindustrial.miner": "Miner Mk 1"
